--- a/sito_modificato/cylinder-volume-calculator.html
+++ b/sito_modificato/cylinder-volume-calculator.html
@@ -327,7 +327,7 @@
           <div class="bg-white rounded-lg shadow-md p-4 mb-6">
             <h2 class="text-lg font-semibold mb-3">Related geometry calculators</h2>
             <ul class="space-y-2">
-              <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/volume-calculator">Volume Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/volume">Volume Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/cone-volume-calculator">Cone Volume Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/sphere-volume-calculator">Sphere Volume Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/area">Area Calculator</a></li>
