--- a/sito_modificato/dodecagon-calculator.html
+++ b/sito_modificato/dodecagon-calculator.html
@@ -270,7 +270,7 @@
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/octagon-calculator">Octagon Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/perimeter-calculator">Perimeter Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/area">Area Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/volume-calculator">Volume Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/volume">Volume Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/math-conversions">Math &amp; Conversions</a></li>
             </ul>
           </div>
