--- a/sito_modificato/joules-to-calories.html
+++ b/sito_modificato/joules-to-calories.html
@@ -251,7 +251,7 @@
           <div class="bg-white rounded-lg shadow-md p-4 mb-6">
             <h2 class="text-lg font-semibold mb-3">Related unit converters</h2>
             <ul class="space-y-2">
-              <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/volume-calculator">Volume Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/volume">Volume Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/percentage-calculator">Percentage Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/decimal-to-fraction">Decimal to Fraction</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/perimeter-calculator">Perimeter Calculator</a></li>
