--- a/sito_modificato/perimeter-calculator.html
+++ b/sito_modificato/perimeter-calculator.html
@@ -341,7 +341,7 @@
             <h2 class="text-lg font-semibold mb-3">Related Math &amp; Conversions tools</h2>
             <ul class="space-y-2">
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/area">Area Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/volume-calculator">Volume Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/volume">Volume Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/circle-calculator">Circle Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/triangle-calculator">Triangle Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/measurement-unit-conversions">Measurement Unit Conversions</a></li>
