--- a/sito_modificato/prism-calculator.html
+++ b/sito_modificato/prism-calculator.html
@@ -647,7 +647,7 @@
                 <li><a href="/pyramid-calculator" class="text-blue-600 hover:underline">Pyramid Calculator</a></li>
                 <li><a href="/cylinder-volume-calculator" class="text-blue-600 hover:underline">Cylinder Volume Calculator</a></li>
                 <li><a href="/sphere-volume-calculator" class="text-blue-600 hover:underline">Sphere Volume Calculator</a></li>
-                <li><a href="/volume-calculator" class="text-blue-600 hover:underline">Volume Calculator (General)</a></li>
+                <li><a href="/volume" class="text-blue-600 hover:underline">Volume Calculator (General)</a></li>
               </ul>
             </div>
           </div>
