--- a/sito_modificato/pyramid-calculator.html
+++ b/sito_modificato/pyramid-calculator.html
@@ -339,7 +339,7 @@
           <div class="bg-white p-6 rounded-lg shadow-md mb-6">
             <h2 class="text-lg font-semibold mb-4">Related 3D geometry tools</h2>
             <ul class="space-y-2">
-              <li><a href="https://calcdomain.com/volume-calculator" class="text-blue-600 hover:underline">Volume Calculator (all solids)</a></li>
+              <li><a href="https://calcdomain.com/volume" class="text-blue-600 hover:underline">Volume Calculator (all solids)</a></li>
               <li><a href="https://calcdomain.com/cone-volume-calculator" class="text-blue-600 hover:underline">Cone Volume Calculator</a></li>
               <li><a href="https://calcdomain.com/cylinder-volume-calculator" class="text-blue-600 hover:underline">Cylinder Volume Calculator</a></li>
               <li><a href="https://calcdomain.com/surface-area" class="text-blue-600 hover:underline">Surface Area Calculator</a></li>
