--- a/sito_modificato/wire-mesh-calculator.html
+++ b/sito_modificato/wire-mesh-calculator.html
@@ -520,7 +520,7 @@ Ad Placement (300×600)
 <ul class="space-y-3 text-sm">
 <li><a href="https://calcdomain.com/concrete-slab-calculator" class="text-blue-600 hover:underline">Concrete Slab Calculator</a></li>
 <li><a href="https://calcdomain.com/rebar-weight" class="text-blue-600 hover:underline">Rebar Weight Calculator</a></li>
-<li><a href="https://calcdomain.com/volume-calculator" class="text-blue-600 hover:underline">Volume Calculator</a></li>
+<li><a href="https://calcdomain.com/volume" class="text-blue-600 hover:underline">Volume Calculator</a></li>
 <li>Construction Materials Cost Calculator</li>
 </ul>
 </div>
