--- a/sito_originale/area.html
+++ b/sito_originale/area.html
@@ -514,7 +514,7 @@
       <div class="bg-white p-6 rounded-lg shadow-md">
         <h2 class="text-xl font-semibold text-gray-900 mb-4">Related Geometry Tools</h2>
         <ul class="space-y-2 text-sm text-blue-600">
-          <li><a class="hover:underline" href="https://calcdomain.com/volume-calculator">Volume Calculator</a></li>
+          <li><a class="hover:underline" href="https://calcdomain.com/volume">Volume Calculator</a></li>
           <li><a class="hover:underline" href="https://calcdomain.com/rectangle-area-calculator">Rectangle Area Calculator</a></li>
           <li><a class="hover:underline" href="https://calcdomain.com/triangle-calculator">Triangle Solver</a></li>
           <li><a class="hover:underline" href="https://calcdomain.com/circle-calculator">Circle Calculator</a></li>
