--- a/sito_originale/volume-calculator.html
+++ b/sito_originale/volume-calculator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://calcdomain.com/volume-calculator">
+<link rel="canonical" href="https://calcdomain.com/volume">
 
 
 
@@ -52,7 +52,7 @@
   "@type": "WebPage",
   "name": "Volume Calculator",
   "description": "Compute volume for common 3D shapes with validation, LaTeX formulas, and unit conversions.",
-  "url": "https://calcdomain.com/volume-calculator",
+  "url": "https://calcdomain.com/volume",
   "inLanguage": "en",
   "author": {
     "@type": "Person",
@@ -91,7 +91,7 @@
       "@type": "ListItem",
       "position": 4,
       "name": "Volume Calculator",
-      "item": "https://calcdomain.com/volume-calculator"
+      "item": "https://calcdomain.com/volume"
     }
   ]
 }</script>
@@ -103,7 +103,7 @@
   "name": "Volume Calculator",
   "applicationCategory": "Calculator",
   "operatingSystem": "Web",
-  "url": "https://calcdomain.com/volume-calculator",
+  "url": "https://calcdomain.com/volume",
   "creator": {
     "@type": "Person",
     "name": "Ugo Candido"
