--- a/sito_modificato/area.html
+++ b/sito_modificato/area.html
@@ -321,7 +321,7 @@
             <ul class="space-y-2">
               <li><a href="https://calcdomain.com/perimeter-calculator" class="text-blue-600 hover:underline">Perimeter Calculator</a></li>
               <li><a href="https://calcdomain.com/surface-area" class="text-blue-600 hover:underline">Surface Area Calculator</a></li>
-              <li><a href="https://calcdomain.com/volume-calculator" class="text-blue-600 hover:underline">Volume Calculator</a></li>
+              <li><a href="https://calcdomain.com/volume" class="text-blue-600 hover:underline">Volume Calculator</a></li>
               <li><a href="https://calcdomain.com/triangle-calculator" class="text-blue-600 hover:underline">Triangle Calculator</a></li>
               <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
               <li><a href="https://calcdomain.com/rectangle-area-calculator" class="text-blue-600 hover:underline">Rectangle Area</a></li>
