--- a/sito_modificato/octagon-calculator.html
+++ b/sito_modificato/octagon-calculator.html
@@ -283,7 +283,7 @@
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/area">Area Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/sphere-calculator">Sphere Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/cylinder-volume-calculator">Cylinder Volume Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/volume-calculator">Volume Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/volume">Volume Calculator</a></li>
             </ul>
           </div>
           <div class="bg-white rounded-lg shadow-md p-4">
