--- a/sito_modificato/solid-geometry-calculator.html
+++ b/sito_modificato/solid-geometry-calculator.html
@@ -317,7 +317,7 @@
             <h2 class="text-lg font-semibold mb-3">Related geometry tools</h2>
             <ul class="space-y-2 text-sm">
               <li><a href="https://calcdomain.com/surface-area" class="text-blue-600 hover:underline">Surface Area Calculator</a></li>
-              <li><a href="https://calcdomain.com/volume-calculator" class="text-blue-600 hover:underline">Volume Calculator</a></li>
+              <li><a href="https://calcdomain.com/volume" class="text-blue-600 hover:underline">Volume Calculator</a></li>
               <li><a href="https://calcdomain.com/geometry-2d-calculator" class="text-blue-600 hover:underline">2D Geometry Calculator</a></li>
               <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
               <li><a href="https://calcdomain.com/triangle-calculator" class="text-blue-600 hover:underline">Triangle Calculator</a></li>
