--- a/sito_modificato/surface-area-calculator.html
+++ b/sito_modificato/surface-area-calculator.html
@@ -349,7 +349,7 @@
             <h2 class="text-lg font-semibold mb-4">Related geometry tools</h2>
             <ul class="space-y-2">
               <li><a href="https://calcdomain.com/area" class="text-blue-600 hover:underline">Area Calculator</a></li>
-              <li><a href="https://calcdomain.com/volume-calculator" class="text-blue-600 hover:underline">Volume Calculator</a></li>
+              <li><a href="https://calcdomain.com/volume" class="text-blue-600 hover:underline">Volume Calculator</a></li>
               <li><a href="https://calcdomain.com/cylinder-volume-calculator" class="text-blue-600 hover:underline">Cylinder Volume Calculator</a></li>
               <li><a href="https://calcdomain.com/pyramid-calculator" class="text-blue-600 hover:underline">Pyramid Calculator</a></li>
               <li><a href="https://calcdomain.com/sphere-calculator" class="text-blue-600 hover:underline">Sphere Calculator</a></li>
