--- a/sito_originale/conic-classifier.html
+++ b/sito_originale/conic-classifier.html
@@ -291,7 +291,7 @@
             <ul class="space-y-2">
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/perimeter-calculator">Perimeter Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/area">Area Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/volume-calculator">Volume Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/volume">Volume Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/cylinder-volume-calculator">Cylinder Volume Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="https://calcdomain.com/sphere-calculator">Sphere Calculator</a></li>
             </ul>
