--- a/sito_modificato/subcategories/geometry-area-and-perimeter-formulas.html
+++ b/sito_modificato/subcategories/geometry-area-and-perimeter-formulas.html
@@ -6,7 +6,7 @@
 
   <title>Geometry | Shape Area, Perimeter & Volume Calculators</title>
   <meta name="description" content="Interactive geometry hub: calculate area, perimeter, and volume for common 2D and 3D shapes (triangle, circle, rectangle, sphere, cylinder, cone). Includes formulas, diagrams, and geometry FAQs.">
-  <link rel="canonical" href="https://calcdomain.com/geometry">
+  <link rel="canonical" href="geometry-area-and-perimeter-formulas">
 
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -63,8 +63,8 @@
         "@type": "BreadcrumbList",
         "itemListElement": [
           { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://calcdomain.com" },
-          { "@type": "ListItem", "position": 2, "name": "Math & Conversions", "item": "https://calcdomain.com/math-conversions" },
-          { "@type": "ListItem", "position": 3, "name": "Geometry", "item": "https://calcdomain.com/geometry" }
+          { "@type": "ListItem", "position": 2, "name": "Geometry", "item": "https://calcdomain.com/geometry" },
+          { "@type": "ListItem", "position": 3, "name": "Geometry Area and Perimeter Formulas", "item": "https://calcdomain.com/geometry-area-and-perimeter-formulas" }
         ]
       },
       {
