fixwithnew categories and sub

--- a/sito_modificato/index.html
+++ b/sito_modificato/index.html
@@ -303,7 +303,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 
                 <!--  Finance Category --> 
-                <a href="https://calcdomain.com/finance" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+                <a href="https://calcdomain.com/categories/finance" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="bg-gradient-to-r from-blue-500 to-blue-600 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
@@ -332,7 +332,7 @@
                 </a>
 
                 <!-- Health & Fitness Category -->
-                <a href="https://calcdomain.com/health-fitness" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+                <a href="https://calcdomain.com/categories/health-fitness" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="bg-gradient-to-r from-green-500 to-green-600 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
@@ -361,7 +361,7 @@
                 </a>
 
                 <!-- Math & Conversions Category -->
-                <a href="https://calcdomain.com/math-conversions" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+                <a href="https://calcdomain.com/categories/math-conversions" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="bg-gradient-to-r from-purple-500 to-purple-600 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
@@ -390,7 +390,7 @@
                 </a>
 
                 <!-- Science Category -->
-                <a href="https://calcdomain.com/science" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+                <a href="https://calcdomain.com/categories/science" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="bg-gradient-to-r from-indigo-500 to-sky-500 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
@@ -448,7 +448,7 @@
                 </a>
 
                 <!-- Lifestyle & Everyday Category -->
-                <a href="https://calcdomain.com/lifestyle-everyday" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+                <a href="https://calcdomain.com/categories/lifestyle-everyday" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="bg-gradient-to-r from-indigo-500 to-indigo-600 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
@@ -477,7 +477,7 @@
                 </a>
 
                 <!-- Construction & DIY Category -->
-                <a href="https://calcdomain.com/construction-diy" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+                <a href="https://calcdomain.com/categories/construction-diy" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="bg-gradient-to-r from-orange-500 to-orange-600 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
@@ -510,7 +510,7 @@
 
                  <!-- Engineering Category -->
              
-                <a href="https://calcdomain.com/engineering" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+                <a href="https://calcdomain.com/categories/engineering" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="bg-gradient-to-r from-yellow-500 to-yellow-600 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
@@ -537,7 +537,7 @@
                         </div>
                     </div>
                 </a>
-   <a href="https://calcdomain.com/construction" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+   <a href="https://calcdomain.com/categories/construction" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="bg-gradient-to-r from-yellow-500 to-yellow-600 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
@@ -633,11 +633,11 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Categories</h4>
                     <ul class="space-y-2">
-                        <li><a href="https://calcdomain.com/finance" class="text-gray-400 hover:text-white">Finance</a></li>
-                        <li><a href="https://calcdomain.com/health-fitness" class="text-gray-400 hover:text-white">Health & Fitness</a></li>
-                        <li><a href="https://calcdomain.com/math-conversions" class="text-gray-400 hover:text-white">Math & Conversions</a></li>
-                        <li><a href="https://calcdomain.com/lifestyle-everyday" class="text-gray-400 hover:text-white">Lifestyle & Everyday</a></li>
-                        <li><a href="https://calcdomain.com/construction-diy" class="text-gray-400 hover:text-white">Construction & DIY</a></li>
+                        <li><a href="https://calcdomain.com/categories/finance" class="text-gray-400 hover:text-white">Finance</a></li>
+                        <li><a href="https://calcdomain.com/categories/health-fitness" class="text-gray-400 hover:text-white">Health & Fitness</a></li>
+                        <li><a href="https://calcdomain.com/categories/math-conversions" class="text-gray-400 hover:text-white">Math & Conversions</a></li>
+                        <li><a href="https://calcdomain.com/categories/lifestyle-everyday" class="text-gray-400 hover:text-white">Lifestyle & Everyday</a></li>
+                        <li><a href="https://calcdomain.com/categories/construction-diy" class="text-gray-400 hover:text-white">Construction & DIY</a></li>
                     </ul>
                 </div>
                 <div>
