--- a/sito_modificato/core-math-equations-slope-evaluation.html
+++ b/sito_modificato/core-math-equations-slope-evaluation.html
@@ -6,7 +6,7 @@
 
   <title>Core Math &amp; Algebra | Linear Equations, Quadratics, Slopes</title>
   <meta name="description" content="Interactive core math & algebra hub: solve linear equations, factor and solve quadratics, find slope and line equations, and review key formulas. Built for students following Common Core algebra topics.">
-  <link rel="canonical" href="https://calcdomain.com/core-math-algebra">
+  <link rel="canonical" href="https://calcdomain.com/core-math-algebra-equations-slope-evaluation">
 
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -62,8 +62,8 @@
         "@type": "BreadcrumbList",
         "itemListElement": [
           { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://calcdomain.com" },
-          { "@type": "ListItem", "position": 2, "name": "Math & Conversions", "item": "https://calcdomain.com/math-conversions" },
-          { "@type": "ListItem", "position": 3, "name": "Core Math & Algebra", "item": "https://calcdomain.com/core-math-algebra" }
+          { "@type": "ListItem", "position": 2, "name": "Math & Conversions", "item": "https://calcdomain.com/categories/math-conversions" },
+          { "@type": "ListItem", "position": 3, "name": "Core Math & Algebra", "item": "https://calcdomain.com/core-math-algebra-equations-slope-evaluation" }
         ]
       },
       {
