--- a/sito_modificato/diffie-hellman.html
+++ b/sito_modificato/diffie-hellman.html
@@ -1,241 +1,186 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<link rel="canonical" href="https://calcdomain.com/diffie-hellman">
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <title>Diffie–Hellman Key Exchange Calculator – Educational Tool</title>
+  <meta name="description" content="Interactive Diffie–Hellman key exchange calculator. Choose a small prime and generator, set Alice and Bob's private keys, and see how the shared secret is derived step-by-step. Educational use only, not for real cryptography.">
+  <link rel="canonical" href="https://calcdomain.com/diffie-hellman">
 
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+  <style>
+    body { font-family: 'Inter', sans-serif; }
+    .card-hover { transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out; }
+    .card-hover:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); }
 
- 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Diffie-Hellman Key Exchange Calculator</title>
-<meta content="An authoritative and interactive Diffie-Hellman Key Exchange calculator for cryptographic computations." name="description"/>
-<meta content="Ugo Candido" name="author"/>
+    .prose { max-width: 65ch; margin-left: auto; margin-right: auto; }
+    .prose h2 { font-size: 1.5rem; font-weight: 600; margin-top: 2rem; margin-bottom: 1rem; }
+    .prose h3 { font-size: 1.25rem; font-weight: 600; margin-top: 1.5rem; margin-bottom: 0.5rem; }
+    .prose p { margin-bottom: 1rem; line-height: 1.6; }
+    .prose ul, .prose ol { margin-left: 1.5rem; margin-bottom: 1rem; }
+    .prose li { margin-bottom: 0.5rem; }
+    .formula-box { background: #f3f4f6; border: 1px solid #d1d5db; border-radius: 8px; padding: 1rem; overflow-x: auto; margin: 1rem 0; }
+    .badge { display:inline-flex; align-items:center; border-radius:9999px; font-size:0.75rem; padding:0.2rem 0.65rem; font-weight:500; }
+  </style>
 
-<style>
-        :root {
-            --primary-color: #005A9C;
-            --background-color: #F8F9FA;
-            --text-color: #212529;
-            --border-color: #DEE2E6;
-            --input-padding: 1rem;
-            --border-radius: 8px;
-        }
+  <!-- HEAD_SCRIPTS_E_META -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7MB5V1LZRN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-        body {
-            font-family: Arial, sans-serif;
-            background-color: var(--background-color);
-            color: var(--text-color);
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-        }
-
-        h1, h2 {
-            color: var(--primary-color);
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-        }
-
-        .calculator-container, .results-container, .content-container, .faq-container {
-            background-color: #FFF;
-            border: 1px solid var(--border-color);
-            border-radius: var(--border-radius);
-            padding: 1.5rem;
-            margin-top: 1.5rem;
-        }
-
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: bold;
-        }
-
-        .form-control {
-            width: 100%;
-            padding: var(--input-padding);
-            border: 1px solid var(--border-color);
-            border-radius: var(--border-radius);
-        }
-
-        .button {
-            background-color: var(--primary-color);
-            color: white;
-            border: none;
-            padding: 1rem;
-            cursor: pointer;
-            border-radius: var(--border-radius);
-            text-align: center;
-            display: inline-block;
-        }
-
-        .results {
-            margin-top: 1rem;
-        }
-
-        .faq-container h3 {
-            margin-top: 1rem;
-        }
-
-        .faq-container p {
-            margin-top: 0.5rem;
-        }
-    </style>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "Diffie-Hellman Key Exchange Calculator",
-  "description": "An authoritative and interactive Diffie-Hellman Key Exchange calculator for cryptographic computations.",
-  "url": "https://calcdomain.com/diffie-hellman",
-  "author": {
-    "@type": "Person",
-    "name": "Ugo Candido"
-  },
-  "publisher": {
-    "@type": "Organization",
-    "name": "CalcDomain"
-  },
-  "mainEntity": {
-    "@type": "FAQPage",
-    "mainEntity": [
-      {
-        "@type": "Question",
-        "name": "What is Diffie-Hellman Key Exchange?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Diffie-Hellman Key Exchange is a method of securely exchanging cryptographic keys over a public channel."
-        }
-      }
-    ]
-  }
-}
+    gtag('config', 'G-7MB5V1LZRN');
   </script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="search.js" defer></script>
-<!-- MathJax for LaTeX formulas -->
-<script>
-  window.MathJax = {
-    tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['$','$'], ['\[','\]']]
-    },
-    svg: { fontCache: 'global' }
-  };
-</script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
 
-</head>
-<body>
+  <meta name="google-site-verification" content="_tiTZ9ivAdtXcAS9CMnTNJ549Sg39WVqP_ZFbWgglNA" />
 
-<a class="skip-link" href="#main-content">Skip to main content</a>
-<main class="container" id="main-content">
-<h1>Diffie-Hellman Key Exchange Calculator</h1>
-<p>This calculator is designed for cryptography enthusiasts and professionals to compute key exchanges using the Diffie-Hellman method.</p>
-<section aria-labelledby="calculator-heading" class="calculator-container">
-<h2 id="calculator-heading">Interactive Calculator</h2>
-<form id="dh-calculator">
-<div class="form-group">
-<label for="prime">Prime Number (p) *</label>
-<input aria-required="true" class="form-control" id="prime" required="" type="number"/>
-</div>
-<div class="form-group">
-<label for="base">Base (g) *</label>
-<input aria-required="true" class="form-control" id="base" required="" type="number"/>
-</div>
-<div class="form-group">
-<label for="privateA">Private Key A *</label>
-<input aria-required="true" class="form-control" id="privateA" required="" type="number"/>
-</div>
-<div class="form-group">
-<label for="privateB">Private Key B *</label>
-<input aria-required="true" class="form-control" id="privateB" required="" type="number"/>
-</div>
-<button class="button" onclick="calculate()" type="button">Calculate</button>
-</form>
-</section>
-<section class="results-container">
-<h2>Calculation Results</h2>
-<div class="results" id="results">
-<p>Public Key A: <span id="publicA"></span></p>
-<p>Public Key B: <span id="publicB"></span></p>
-<p>Shared Secret: <span id="sharedSecret"></span></p>
-</div>
-</section>
-<section class="content-container">
-<h2>Data Source and Methodology</h2>
-<p>All calculations are based on the Diffie-Hellman key exchange algorithm. For more information, visit <a href="http://www.irongeek.com/diffie-hellman.php">Irongeek</a>. All calculations are rigorously based on the formulas and data provided by this source.</p>
-</section>
-<section class="content-container">
-<h2>The Formula Explained</h2>
-<p>The Diffie-Hellman key exchange uses the formula: <code>A = g^a mod p</code> and <code>B = g^b mod p</code>, and for the shared secret: <code>Shared Secret = B^a mod p</code>.</p>
-</section>
-<section class="content-container">
-<h2>Glossary of Variables</h2>
-<ul>
-<li><strong>p (Prime Number):</strong> A large prime number used in the key calculation.</li>
-<li><strong>g (Base):</strong> A generator in the group used for calculations.</li>
-<li><strong>Private Key A:</strong> A private number chosen by user A.</li>
-<li><strong>Private Key B:</strong> A private number chosen by user B.</li>
-</ul>
-</section>
-<section class="content-container">
-<h2>How It Works: A Step-by-Step Example</h2>
-<p>Consider a prime number p = 23, base g = 5, private key A = 6, private key B = 15. The public keys computed are A = 5^6 mod 23 = 8, B = 5^15 mod 23 = 19. The shared secret is B^a mod p = 19^6 mod 23 = 2.</p>
-</section>
-<section class="faq-container">
-<h2>Frequently Asked Questions (FAQ)</h2>
-<h3>What is Diffie-Hellman Key Exchange?</h3>
-<p>Diffie-Hellman Key Exchange is a method of securely exchanging cryptographic keys over a public channel.</p>
-<h3>Why is it secure?</h3>
-<p>It relies on the difficulty of computing discrete logarithms, making it hard to derive private keys from public information.</p>
-<h3>Can I use any numbers?</h3>
-<p>No, you must use a large prime number and a base that is a primitive root modulo the prime.</p>
-<h3>What are public and private keys?</h3>
-<p>Public keys can be shared openly, while private keys must remain confidential.</p>
-<h3>How do I ensure security?</h3>
-<p>Use sufficiently large prime numbers and keep your private keys secret.</p>
-</section>
-<div class="author-box">
-<p>Tool developed by <strong>Ugo Candido</strong>. Content verified by the team. Last reviewed for accuracy on: October 15, 2023.</p>
-</div>
-</main>
-<script>
-        function calculate() {
-            const p = parseInt(document.getElementById('prime').value);
-            const g = parseInt(document.getElementById('base').value);
-            const a = parseInt(document.getElementById('privateA').value);
-            const b = parseInt(document.getElementById('privateB').value);
+  <script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script>
+  <script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
 
-            const A = Math.pow(g, a) % p;
-            const B = Math.pow(g, b) % p;
-            const sharedSecret = Math.pow(B, a) % p;
+  <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
+  <script>
+      window.ezstandalone = window.ezstandalone || {};
+      ezstandalone.cmd = ezstandalone.cmd || [];
+  </script>
 
-            document.getElementById('publicA').textContent = A;
-            document.getElementById('publicB').textContent = B;
-            document.getElementById('sharedSecret').textContent = sharedSecret;
+  <script type="application/ld+json">
+  [
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://calcdomain.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Math & Conversions",
+          "item": "https://calcdomain.com/math-conversions"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Cryptography & Security",
+          "item": "https://calcdomain.com/math-conversions/cryptography-security"
+        },
+        {
+          "@type": "ListItem",
+          "position": 4,
+          "name": "Diffie–Hellman key exchange calculator",
+          "item": "https://calcdomain.com/diffie-hellman"
         }
-    </script>
+      ]
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Diffie–Hellman Key Exchange Calculator – Educational Tool",
+      "url": "https://calcdomain.com/diffie-hellman",
+      "description": "Interactive Diffie–Hellman key exchange calculator. Choose a small prime and generator, set Alice and Bob's private keys, and see how the shared secret is derived step-by-step. Educational use only, not for real cryptography.",
+      "inLanguage": "en",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "CalcDomain",
+        "url": "https://calcdomain.com"
+      },
+      "mainEntity": {
+        "@type": "SoftwareApplication",
+        "name": "Diffie–Hellman Key Exchange Calculator",
+        "applicationCategory": "EducationalApplication",
+        "operatingSystem": "Any"
+      }
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "HowTo",
+      "name": "How to use the Diffie–Hellman key exchange calculator",
+      "description": "Step-by-step instructions to simulate a Diffie–Hellman key exchange with small, non-cryptographic parameters.",
+      "step": [
+        {
+          "@type": "HowToStep",
+          "name": "Choose public parameters",
+          "text": "Select the example parameters or enter a small prime modulus p and a generator g."
+        },
+        {
+          "@type": "HowToStep",
+          "name": "Set private keys",
+          "text": "Enter Alice's and Bob's private integers. The calculator will treat them modulo p-1."
+        },
+        {
+          "@type": "HowToStep",
+          "name": "Compute public values",
+          "text": "Click the calculate button to compute Alice's and Bob's public values based on g, p, and their private keys."
+        },
+        {
+          "@type": "HowToStep",
+          "name": "View the shared secret",
+          "text": "The tool computes and shows the shared secret g^(ab) mod p, along with the intermediate values."
+        }
+      ]
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What is the Diffie–Hellman key exchange?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Diffie–Hellman is a key exchange protocol that allows two parties to agree on a shared secret over an insecure channel. They choose a public prime p and a base g, then each party picks a private integer, sends a corresponding public value, and both compute the same shared secret using modular exponentiation."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Is this calculator cryptographically secure?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "No. This calculator is an educational tool that uses small integers and simple JavaScript arithmetic. It is not suitable for real-world security. Production systems use very large parameters and carefully vetted implementations."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Why do we need a prime modulus in Diffie–Hellman?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Using a large prime modulus p and an appropriate generator g ensures that the multiplicative group modulo p has desirable algebraic properties. This makes the discrete logarithm problem hard, which underpins the security of the protocol."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can I use negative or non-integer values?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "No. The protocol is defined over integers modulo a prime p. This calculator accepts only integer values and treats the private keys modulo p-1 for convenience."
+          }
+        }
+      ]
+    }
+  ]
+  </script>
+</head>
+<body class="bg-gray-50 text-gray-800">
 
+  <!-- BODY_SCRIPTS_INIZIO -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9476637732224939"
+       crossorigin="anonymous"></script>
 
-```
-
-
-</body></html>
+  <header class="bg-white shadow-sm sticky top-0 z-50">
+    <nav class="container mx-auto px-4 lg:px-6 py-4" aria-label="Primary">
+      <div class="flex justify-between items-center">
+        <a href="https://calcdomain.com" class="text
