--- a/sito_modificato/subcategories/math-conversions-core-math-algebra.html
+++ b/sito_modificato/subcategories/math-conversions-core-math-algebra.html
@@ -357,7 +357,7 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="font-bold text-lg mb-4">Related in ${category}</h3>
                         <ul class="space-y-3">
-                            <li><a href="https://calcdomain.com" class="text-blue-600 hover:underline">Browse All Categories</a></li>
+                            <li><a href="https://calcdomain.com#categories" class="text-blue-600 hover:underline">Browse All Categories</a></li>
                         </ul>
                     </div>
                 </div>
