--- a/sito_modificato/subcategories/math-conversions-measurement-unit-conversions.html
+++ b/sito_modificato/subcategories/math-conversions-measurement-unit-conversions.html
@@ -240,6 +240,19 @@
                     <span>Measurement Unit Conversions</span>
                 </nav>
 
+                <!-- Calculators Grid Intro (aligned with other subcategories) -->
+                <section class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
+                    <div class="col-span-2 text-center py-12 bg-white rounded-lg shadow-sm border">
+                        <div class="text-gray-500 mb-4">
+                            <svg class="w-16 h-16 mx-auto mb-4 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"></path>
+                            </svg>
+                        </div>
+                        <h3 class="text-lg font-semibold text-gray-800 mb-2">122 Calculators Available</h3>
+                        <p class="text-gray-600">Specialized tools for Measurement Unit Conversions. Search above to find specific calculators.</p>
+                    </div>
+                </section>
+
                 <!-- Calculators Grid -->
                 <section class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-8" aria-label="Measurement unit conversion calculators">
             <a href="https://calcdomain.com/speed-converter" class="card-hover block bg-white border rounded-lg p-4 shadow-sm hover:shadow-md transition" aria-label="Speed Unit Converter (mph, kph, m/s, knots)">
