--- a/sito_modificato/kpa-to-psi.html
+++ b/sito_modificato/kpa-to-psi.html
@@ -67,7 +67,7 @@
               "@type": "ListItem",
               "position": 2,
               "name": "Math & Conversions",
-              "item": "https://calcdomain.com/categories/math"
+              "item": "https://calcdomain.com/categories/math-conversions"
             },
             {
               "@type": "ListItem",
@@ -215,7 +215,7 @@
             <span class="mx-1 text-gray-400">/</span>
           </li>
           <li>
-            <a href="https://calcdomain.com/categories/math" class="text-blue-600 hover:underline">Math &amp; Conversions</a>
+            <a href="https://calcdomain.com/categories/math-conversions" class="text-blue-600 hover:underline">Math &amp; Conversions</a>
             <span class="mx-1 text-gray-400">/</span>
           </li>
           <li>
