--- a/sito_modificato/matrix-inverse.html
+++ b/sito_modificato/matrix-inverse.html
@@ -75,7 +75,7 @@
         "@type": "ListItem",
         "position": 2,
         "name": "Math",
-        "item": "https://calcdomain.com/categories/math"
+        "item": "https://calcdomain.com/categories/math-conversions"
       },
       {
         "@type": "ListItem",
@@ -204,7 +204,7 @@
       <nav id="breadcrumb-container" class="text-sm mb-4 text-gray-600">
         <a href="https://calcdomain.com" class="text-blue-600 hover:underline">Home</a>
         <span class="mx-1">/</span>
-        <a href="https://calcdomain.com/categories/math" class="text-blue-600 hover:underline">Math</a>
+        <a href="https://calcdomain.com/categories/math-conversions" class="text-blue-600 hover:underline">Math</a>
         <span class="mx-1">/</span>
         <a href="https://calcdomain.com/subcategories/core-math-algebra-calculator" class="text-blue-600 hover:underline">Core Math &amp; Algebra</a>
         <span class="mx-1">/</span>
