--- a/sito_modificato/core-math-equations-slope-evaluation.html
+++ b/sito_modificato/core-math-equations-slope-evaluation.html
@@ -62,7 +62,7 @@
         "@type": "BreadcrumbList",
         "itemListElement": [
           { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://calcdomain.com" },
-          { "@type": "ListItem", "position": 2, "name": "Math & Conversions", "item": "https://calcdomain.com/categories/math-conversions" },
+          { "@type": "ListItem", "position": 2, "name": "Math & Conversions", "item": "https://calcdomain.com/#categories/math-conversions" },
           { "@type": "ListItem", "position": 3, "name": "Core Math & Algebra", "item": "https://calcdomain.com/core-math-algebra-equations-slope-evaluation" }
         ]
       },
