--- a/template_perfetti/template_master_INTERNA.html
+++ b/template_perfetti/template_master_INTERNA.html
@@ -103,11 +103,11 @@
           <div>
             <h4 class="text-lg font-semibold mb-4">Categories</h4>
             <ul class="space-y-2">
-              <li><a href="https://calcdomain.com/categories/finance" class="text-gray-400 hover:text-white">Finance</a></li>
-              <li><a href="https://calcdomain.com/categories/health-fitness" class="text-gray-400 hover:text-white">Health & Fitness</a></li>
-              <li><a href="https://calcdomain.com/categories/math-conversions" class="text-gray-400 hover:text-white">Math & Conversions</a></li>
-              <li><a href="https://calcdomain.com/categories/lifestyle-everyday" class="text-gray-400 hover:text-white">Lifestyle & Everyday</a></li>
-              <li><a href="https://calcdomain.com/categories/construction-diy" class="text-gray-400 hover:text-white">Construction & DIY</a></li>
+              <li><a href="https://calcdomain.com/#categories/finance" class="text-gray-400 hover:text-white">Finance</a></li>
+              <li><a href="https://calcdomain.com/#categories/health-fitness" class="text-gray-400 hover:text-white">Health & Fitness</a></li>
+              <li><a href="https://calcdomain.com/#categories/math-conversions" class="text-gray-400 hover:text-white">Math & Conversions</a></li>
+              <li><a href="https://calcdomain.com/#categories/lifestyle-everyday" class="text-gray-400 hover:text-white">Lifestyle & Everyday</a></li>
+              <li><a href="https://calcdomain.com/#categories/construction-diy" class="text-gray-400 hover:text-white">Construction & DIY</a></li>
             </ul>
           </div>
           <div>
