--- a/sito_modificato/graph-degree.html
+++ b/sito_modificato/graph-degree.html
@@ -67,7 +67,7 @@
         "@type": "ListItem",
         "position": 2,
         "name": "Math & Conversions",
-        "item": "https://calcdomain.com/categories/math-conversions"
+        "item": "https://calcdomain.com/#categories/math-conversions"
       },
       {
         "@type": "ListItem",
@@ -175,7 +175,7 @@
           </div>
           <div class="hidden md:flex items-center space-x-6">
             <a href="https://calcdomain.com/search" class="text-gray-700 hover:text-blue-600 transition-colors">Advanced Search</a>
-            <a href="https://calcdomain.com/categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
+            <a href="https://calcdomain.com/#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
           </div>
           <button id="mobile-menu-toggle" class="md:hidden p-2" aria-controls="mobile-menu" aria-expanded="false" aria-label="Open menu" type="button">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
@@ -190,7 +190,7 @@
           </div>
           <div class="space-y-2">
             <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-            <a href="https://calcdomain.com/categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+            <a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
           </div>
         </nav>
       </nav>
@@ -201,7 +201,7 @@
       <nav id="breadcrumb-container" class="text-sm mb-4 text-gray-600">
         <a href="https://calcdomain.com" class="text-blue-600 hover:underline">Home</a>
         <span class="mx-1">/</span>
-        <a href="https://calcdomain.com/categories/math-conversions" class="text-blue-600 hover:underline">Math &amp; Conversions</a>
+        <a href="https://calcdomain.com/#categories/math-conversions" class="text-blue-600 hover:underline">Math &amp; Conversions</a>
         <span class="mx-1">/</span>
         <a href="https://calcdomain.com/subcategories/core-math-algebra" class="text-blue-600 hover:underline">Core Math &amp; Algebra</a>
         <span class="mx-1">/</span>
