--- a/sito_modificato/index.html
+++ b/sito_modificato/index.html
@@ -574,7 +574,7 @@
                         <div class="text-4xl mb-4">🔍</div>
                         <h3 class="text-xl font-bold mb-2">Browse All</h3>
                         <p class="text-gray-300 mb-6">Can't find what you're looking for? Browse our complete collection of calculators.</p>
-                        <a href="#search" class="inline-block bg-white text-gray-900 px-6 py-2 rounded-full font-semibold hover:bg-gray-100 transition-colors">Search Calculators</a>
+                        <a href="/search" class="inline-block bg-white text-gray-900 px-6 py-2 rounded-full font-semibold hover:bg-gray-100 transition-colors">Search Calculators</a>
                     </div>
                 </div>
             </div>
