--- a/sito_modificato/joules-to-kwh.html
+++ b/sito_modificato/joules-to-kwh.html
@@ -66,7 +66,7 @@
               "@type": "ListItem",
               "position": 2,
               "name": "Math & Conversions",
-              "item": "https://calcdomain.com/#categories/math-conversions"
+              "item": "https://calcdomain.com/categories/math-conversions"
             },
             {
               "@type": "ListItem",
@@ -162,7 +162,7 @@
             <span class="text-gray-400 mx-1">/</span>
           </li>
           <li>
-            <a href="https://calcdomain.com/#categories/math-conversions" class="text-blue-600 hover:underline">Math &amp; Conversions</a>
+            <a href="https://calcdomain.com/categories/math-conversions" class="text-blue-600 hover:underline">Math &amp; Conversions</a>
             <span class="text-gray-400 mx-1">/</span>
           </li>
           <li>
