--- a/sito_modificato/conversions-typography-and-web.html
+++ b/sito_modificato/conversions-typography-and-web.html
@@ -88,7 +88,7 @@
           "@type": "ListItem",
           "position": 2,
           "name": "Math & Conversions",
-          "item": "https://calcdomain.com/#categories/math-conversions"
+          "item": "https://calcdomain.com/categories/math-conversions"
         },
         {
           "@type": "ListItem",
