--- a/sito_modificato/dodecahedron-volume.html
+++ b/sito_modificato/dodecahedron-volume.html
@@ -67,7 +67,7 @@
           "@type": "ListItem",
           "position": 2,
           "name": "Math & Conversions",
-          "item": "https://calcdomain.com/#categories/math-conversions"
+          "item": "https://calcdomain.com/categories/math-conversions"
         },
         {
           "@type": "ListItem",
@@ -180,7 +180,7 @@
           </li>
           <li><span>/</span></li>
           <li>
-            <a href="https://calcdomain.com/#categories/math-conversions" class="text-blue-600 hover:underline">Math &amp; Conversions</a>
+            <a href="https://calcdomain.com/categories/math-conversions" class="text-blue-600 hover:underline">Math &amp; Conversions</a>
           </li>
           <li><span>/</span></li>
           <li>
