--- a/sito_modificato/graphing.html
+++ b/sito_modificato/graphing.html
@@ -95,7 +95,7 @@
               "@type": "ListItem",
               "position": 2,
               "name": "Math & Conversions",
-              "item": "https://calcdomain.com/#categories/math-conversions"
+              "item": "https://calcdomain.com/categories/math-conversions"
             },
             {
               "@type": "ListItem",
