--- a/sito_modificato/probability-calculator.html
+++ b/sito_modificato/probability-calculator.html
@@ -75,7 +75,7 @@
         "@type": "ListItem",
         "position": 2,
         "name": "Math & Conversions",
-        "item": "https://calcdomain.com/#categories/math-conversions"
+        "item": "https://calcdomain.com/categories/math-conversions"
       },
       {
         "@type": "ListItem",
@@ -204,7 +204,7 @@
       <nav id="breadcrumb-container" class="text-sm mb-4 text-gray-600">
         <a href="https://calcdomain.com" class="text-blue-600 hover:underline">Home</a>
         <span class="mx-1">/</span>
-        <a href="https://calcdomain.com/#categories/math-conversions" class="text-blue-600 hover:underline">Math &amp; Conversions</a>
+        <a href="https://calcdomain.com/categories/math-conversions" class="text-blue-600 hover:underline">Math &amp; Conversions</a>
         <span class="mx-1">/</span>
         <a href="https://calcdomain.com/subcategories/core-math-algebra-calculator" class="text-blue-600 hover:underline">Core Math &amp; Algebra</a>
         <span class="mx-1">/</span>
@@ -617,7 +617,7 @@
                 <li><a href="https://calcdomain.com/system-of-equations" class="text-blue-600 hover:underline">System of equations</a></li>
                 <li><a href="https://calcdomain.com/linear-algebra" class="text-blue-600 hover:underline">Linear algebra toolkit</a></li>
               </ul>
-              <a href="https://calcdomain.com/#categories/math-conversions" class="inline-flex mt-4 text-sm font-medium text-blue-600 hover:underline">
+              <a href="https://calcdomain.com/categories/math-conversions" class="inline-flex mt-4 text-sm font-medium text-blue-600 hover:underline">
                 View all Math &amp; Conversions tools &rarr;
               </a>
             </section>
