--- a/sito_modificato/subcategories/structural-engineering.html
+++ b/sito_modificato/subcategories/structural-engineering.html
@@ -49,8 +49,10 @@
       </div>
     </nav>
   </header>
-  <main class="container mx-auto px-4 lg:px-6 py-10">
-    <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+  <div class="container mx-auto px-4 lg:px-6 py-10">
+    <div class="flex flex-col lg:flex-row gap-8">
+      <main class="w-full lg:w-2/3">
+        <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
       <a href="https://calcdomain.com" class="hover:text-blue-600">Home</a> &raquo;
       <a href="https://calcdomain.com/engineering" class="hover:text-blue-600">Engineering</a> &raquo;
       <span class="text-gray-900">Structural Engineering Calculators</span>
@@ -691,7 +693,33 @@
         These tools summarize provisions from major standards. Always confirm load cases, partial factors, resistance factors, material grades, and jurisdictional amendments that apply to your project.
       </div>
     </section>
-  </main>
+      </main>
+      <aside class="w-full lg:w-1/3">
+        <div class="sticky top-24 space-y-8">
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="font-bold text-lg mb-4">Popular in Engineering</h3>
+            <ul class="space-y-3 text-sm">
+              <li><a href="https://calcdomain.com/dead-load" class="text-blue-600 hover:underline">Dead Load</a></li>
+              <li><a href="https://calcdomain.com/beam-load" class="text-blue-600 hover:underline">Beam Load</a></li>
+              <li><a href="https://calcdomain.com/crane-runway-beam-design" class="text-blue-600 hover:underline">Crane Runway Beam</a></li>
+              <li><a href="https://calcdomain.com/masonry-column-design" class="text-blue-600 hover:underline">Masonry Column</a></li>
+            </ul>
+          </div>
+          <div class="bg-gray-200 h-64 rounded-lg flex items-center justify-center">
+            <p class="text-gray-500 text-sm">Ad / Promo Space</p>
+          </div>
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="font-bold text-lg mb-4">Explore More</h3>
+            <ul class="space-y-3 text-sm">
+              <li><a href="https://calcdomain.com/subcategories/electrical" class="text-blue-600 hover:underline">Electrical Calculators</a></li>
+              <li><a href="https://calcdomain.com/subcategories/mechanical-engineering" class="text-blue-600 hover:underline">Mechanical Engineering</a></li>
+              <li><a href="https://calcdomain.com/categories/engineering" class="text-blue-600 hover:underline">All Engineering</a></li>
+            </ul>
+          </div>
+        </div>
+      </aside>
+    </div>
+  </div>
   <footer class="bg-white border-t mt-12">
     <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
       <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
