--- a/sito_modificato/subcategories/electrical.html
+++ b/sito_modificato/subcategories/electrical.html
@@ -49,18 +49,20 @@
       </div>
     </nav>
   </header>
-  <main class="container mx-auto px-4 lg:px-6 py-10">
-    <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
-      <a href="https://calcdomain.com" class="hover:text-blue-600">Home</a> &raquo;
-      <a href="https://calcdomain.com/subcategories/electrical" class="hover:text-blue-600">Engineering</a> &raquo;
-      <span class="text-gray-900">Electrical Calculators</span>
-    </nav>
-    <header class="mb-8">
-      <h1 class="text-4xl font-extrabold text-gray-900 mb-3">Electrical Calculators</h1>
-      <p class="text-lg text-gray-600">Quickly convert amps, watts, volts, power factor, kVA, horsepower, and more. Essential toolkit for electrical engineers, electricians, and students.</p>
-    </header>
-    <section>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+  <div class="container mx-auto px-4 lg:px-6 py-10">
+    <div class="flex flex-col lg:flex-row gap-8">
+      <main class="w-full lg:w-2/3">
+        <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+          <a href="https://calcdomain.com" class="hover:text-blue-600">Home</a> &raquo;
+          <a href="https://calcdomain.com/engineering" class="hover:text-blue-600">Engineering</a> &raquo;
+          <span class="text-gray-900">Electrical Calculators</span>
+        </nav>
+        <header class="mb-8">
+          <h1 class="text-4xl font-extrabold text-gray-900 mb-3">Electrical Calculators</h1>
+          <p class="text-lg text-gray-600">Quickly convert amps, watts, volts, power factor, kVA, horsepower, and more. Essential toolkit for electrical engineers, electricians, and students.</p>
+        </header>
+        <section>
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <!-- List all electrical calculators as cards -->
         <a href="https://calcdomain.com/amps-to-watts" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
           <div class="bg-blue-100 p-3 rounded-full">
@@ -195,8 +197,34 @@
           </div>
         </a>
       </div>
-    </section>
-  </main>
+        </section>
+      </main>
+      <aside class="w-full lg:w-1/3">
+        <div class="sticky top-24 space-y-8">
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="font-bold text-lg mb-4">Popular in Engineering</h3>
+            <ul class="space-y-3 text-sm">
+              <li><a href="https://calcdomain.com/ohm-s-law-calculator" class="text-blue-600 hover:underline">Ohm's Law</a></li>
+              <li><a href="https://calcdomain.com/amps-to-watts" class="text-blue-600 hover:underline">Amps to Watts</a></li>
+              <li><a href="https://calcdomain.com/three-phase-power" class="text-blue-600 hover:underline">Three Phase Power</a></li>
+              <li><a href="https://calcdomain.com/watts-to-hp" class="text-blue-600 hover:underline">Watts to Horsepower</a></li>
+            </ul>
+          </div>
+          <div class="bg-gray-200 h-64 rounded-lg flex items-center justify-center">
+            <p class="text-gray-500 text-sm">Ad / Promo Space</p>
+          </div>
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="font-bold text-lg mb-4">Explore More</h3>
+            <ul class="space-y-3 text-sm">
+              <li><a href="https://calcdomain.com/subcategories/structural-engineering" class="text-blue-600 hover:underline">Structural Engineering</a></li>
+              <li><a href="https://calcdomain.com/subcategories/mechanical-engineering" class="text-blue-600 hover:underline">Mechanical Engineering</a></li>
+              <li><a href="https://calcdomain.com/categories/engineering" class="text-blue-600 hover:underline">All Engineering</a></li>
+            </ul>
+          </div>
+        </div>
+      </aside>
+    </div>
+  </div>
   <footer class="bg-white border-t mt-12">
     <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
       <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
