--- a/sito_modificato/z-score.html
+++ b/sito_modificato/z-score.html
@@ -486,8 +486,7 @@
               <li><a href="https://calcdomain.com/standard-deviation" class="text-blue-600 hover:underline">Standard Deviation</a></li>
               <li><a href="https://calcdomain.com/t-score" class="text-blue-600 hover:underline">t-score Calculator</a></li>
               <li><a href="https://calcdomain.com/correlation" class="text-blue-600 hover:underline">Correlation &amp; r</a></li>
-              <li><a href="https://calcdomain.com/percentile" class="text-blue-600 hover:underline">Percentile Calculator</a></li>
-              <li><a href="https://calcdomain.com/hypothesis-test" class="text-blue-600 hover:underline">Hypothesis Test Assistant</a></li>
+              <li><a href="https://calcdomain.com/percentage-calculator" class="text-blue-600 hover:underline">Percentage Calculator</a></li>
             </ul>
           </div>
           <div class="bg-white rounded-lg shadow-md p-6">
