--- a/sito_modificato/mach-to-mph.html
+++ b/sito_modificato/mach-to-mph.html
@@ -251,8 +251,7 @@
           <h2 class="text-lg font-semibold mb-3">Related Speed Converters</h2>
           <ul class="space-y-2">
             <li><a href="https://calcdomain.com/mph-to-mach" class="text-blue-600 hover:underline">MPH to Mach</a></li>
-            <li><a href="https://calcdomain.com/kmh-to-mach" class="text-blue-600 hover:underline">km/h to Mach</a></li>
-            <li><a href="https://calcdomain.com/math-conversions" class="text-blue-600 hover:underline">All Math &amp; Conversions</a></li>
+             <li><a href="math-conversions-measurement-unit-conversions.html" class="text-blue-600 hover:underline">All Math &amp; Conversions</a></li>
           </ul>
         </div>
 
