--- a/sito_modificato/kruskal-wallis-test.html
+++ b/sito_modificato/kruskal-wallis-test.html
@@ -502,7 +502,7 @@
             <h2 class="text-lg font-semibold mb-3">Related calculators</h2>
             <ul class="space-y-2 text-sm">
               <li>
-                <a href="https://calcdomain.com/anova-one-way" class="text-blue-600 hover:underline">
+                <a href="https://calcdomain.com/one-way-anova" class="text-blue-600 hover:underline">
                   One-way ANOVA Calculator
                 </a>
                 <p class="text-gray-500 text-xs">
