--- a/sito_modificato/pension.html
+++ b/sito_modificato/pension.html
@@ -434,8 +434,8 @@
       <aside class="w-full lg:w-1/3">
         <div class="sticky top-24">
           <!-- Sticky ad -->
-          <div class="bg-gray-200 rounded-lg mb-6 flex items-center justify-center sticky-ad">
-            <p class="text-gray-500">Sticky Ad Unit (e.g., 300×600)</p>
+          <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
+            <div class="w-full h-full ad-slot" aria-hidden="true"></div>
           </div>
 
           <!-- Related calculators (topic cluster) -->
