--- a/sito_modificato/subcategories/construction-diy-project-layout-design.html
+++ b/sito_modificato/subcategories/construction-diy-project-layout-design.html
@@ -28,7 +28,9 @@
                                     <h3 class="font-semibold text-gray-800">Floor Plan Calculator</h3>
                                 </div>
                             </a></div>                </section>            </main>
-            <aside class="w-full lg:w-1/3">                <div class="sticky top-24 space-y-8">                    <div class="bg-gray-200 h-96 rounded-lg flex items-center justify-center">                        <p class="text-gray-500">Sticky Ad Unit (e.g., 300x600)</p>                    </div>
+            <aside class="w-full lg:w-1/3">                <div class="sticky top-24 space-y-8">                    <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
+                      <div class="w-full h-full ad-slot" aria-hidden="true"></div>
+                    </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">                        <h3 class="font-bold text-lg mb-4">Related Categories</h3>                        <ul class="space-y-3">                            <li><a href="https://calcdomain.com/finance" class="text-blue-600 hover:underline">Finance Calculators</a></li>                            <li><a href="https://calcdomain.com/health-fitness" class="text-blue-600 hover:underline">Health & Fitness</a></li>                            <li><a href="https://calcdomain.com/math-conversions" class="text-blue-600 hover:underline">Math & Conversions</a></li>                            <li><a href="https://calcdomain.com/lifestyle-everyday" class="text-blue-600 hover:underline">Lifestyle & Everyday</a></li>                        </ul>                    </div>                </div>            </aside>
         </div>    </div>        <footer class="bg-white border-t mt-12">        <div class="container mx-auto px-6 py-8 text-center text-gray-600">            <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>        </div>    </footer>
 </body></html>
