--- a/sito_modificato/subcategories/electrical.html
+++ b/sito_modificato/subcategories/electrical.html
@@ -210,8 +210,8 @@
               <li><a href="https://calcdomain.com/watts-to-hp" class="text-blue-600 hover:underline">Watts to Horsepower</a></li>
             </ul>
           </div>
-          <div class="bg-gray-200 h-64 rounded-lg flex items-center justify-center">
-            <p class="text-gray-500 text-sm">Ad / Promo Space</p>
+          <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
+            <div class="w-full h-full ad-slot" aria-hidden="true"></div>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h3 class="font-bold text-lg mb-4">Explore More</h3>
