--- a/sito_modificato/subcategories/finance-retirement.html
+++ b/sito_modificato/subcategories/finance-retirement.html
@@ -192,8 +192,8 @@
                         </div>
                     </div>
 
-                    <div class="bg-gray-200 h-96 rounded-lg flex items-center justify-center">
-                        <p class="text-gray-500">Sticky Ad Unit (e.g., 300×600)</p>
+                    <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
+                      <div class="w-full h-full ad-slot" aria-hidden="true"></div>
                     </div>
 
                     <div class="bg-white p-6 rounded-lg shadow-md">
