--- a/sito_modificato/subcategories/math-conversions-measurement-unit-conversions.html
+++ b/sito_modificato/subcategories/math-conversions-measurement-unit-conversions.html
@@ -653,9 +653,9 @@
                         </div>
                     </div>
 
-                    <!-- Ad Placeholder -->
-                    <div class="bg-gray-200 h-96 rounded-lg flex items-center justify-center">
-                        <p class="text-gray-500">Sticky Ad Unit (e.g., 300x600)</p>
+                    <!-- Advertisement -->
+                    <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
+                      <div class="w-full h-full ad-slot" aria-hidden="true"></div>
                     </div>
 
                     <!-- Related Subcategories -->
