--- a/sito_modificato/auto-lease-calculator.html
+++ b/sito_modificato/auto-lease-calculator.html
@@ -345,7 +345,7 @@
                         <li><strong>Sales Tax:</strong> Enter your local tax rate and choose the tax treatment method used in your state.</li>
                     </ol>
 
-                    <!-- In-Content Ad Placeholder -->
+                    <!-- Advertisement -->
                     <div class="text-center my-6 bg-gray-200 py-10">
                         <p class="text-gray-500">In-Content Ad Unit</p>
                     </div>
@@ -435,9 +435,9 @@
             <!-- Right Sidebar: Ads & Related Links -->
             <aside class="w-full lg:w-1/3">
                 <div class="sticky top-24">
-                    <!-- Ad Placeholder -->
-                    <div class="bg-gray-200 h-96 rounded-lg mb-6 flex items-center justify-center">
-                        <p class="text-gray-500">Sticky Ad Unit (e.g., 300x600)</p>
+                    <!-- Advertisement -->
+                    <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
+                      <div class="w-full h-full ad-slot" aria-hidden="true"></div>
                     </div>
 
                     <!-- Related Calculators -->
