--- a/sito_modificato/baconian-cipher.html
+++ b/sito_modificato/baconian-cipher.html
@@ -229,8 +229,8 @@
 
             <aside class="w-full lg:w-1/3">
                 <div class="sticky top-24 space-y-8">
-                    <div class="bg-gray-200 h-96 rounded-lg flex items-center justify-center">
-                        <p class="text-gray-500">Sticky Ad Unit (e.g., 300x600)</p>
+                    <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
+                      <div class="w-full h-full ad-slot" aria-hidden="true"></div>
                     </div>
 
                     <div class="bg-white p-6 rounded-lg shadow-md">
