--- a/sito_modificato/house-affordability.html
+++ b/sito_modificato/house-affordability.html
@@ -484,7 +484,7 @@
                     </ul>
                     <p><strong>Do NOT include:</strong> Utilities, groceries, insurance (except home insurance), entertainment, or current rent.</p>
 
-                    <!-- In-Content Ad Placeholder -->
+                    <!-- Advertisement -->
                     <div class="text-center my-6 bg-gray-200 py-10 rounded">
                         <p class="text-gray-500">In-Content Ad Unit</p>
                     </div>
@@ -544,9 +544,9 @@
             <!-- Right Sidebar: Ads & Related Links -->
             <aside class="w-full lg:w-1/3">
                 <div class="sticky top-24">
-                    <!-- Ad Placeholder -->
-                    <div class="bg-gray-200 h-96 rounded-lg mb-6 flex items-center justify-center">
-                        <p class="text-gray-500">Sticky Ad Unit (300x600)</p>
+                    <!-- Advertisement -->
+                    <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
+                      <div class="w-full h-full ad-slot" aria-hidden="true"></div>
                     </div>
 
                     <!-- Related Calculators -->
