--- a/sito_modificato/mirr.html
+++ b/sito_modificato/mirr.html
@@ -401,8 +401,8 @@
       <!-- Right: Sidebar -->
       <aside class="w-full lg:w-1/3">
         <div class="sticky top-24">
-          <div class="bg-gray-200 rounded-lg mb-6 flex items-center justify-center" style="height:600px">
-            <p class="text-gray-500">Sticky Ad Unit (e.g., 300×600)</p>
+          <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
+            <div class="w-full h-full ad-slot" aria-hidden="true"></div>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h3 class="font-bold text-lg mb-4">Related Investment Tools</h3>
