--- a/sito_modificato/simple-loan.html
+++ b/sito_modificato/simple-loan.html
@@ -379,8 +379,8 @@
       <!-- Sidebar -->
       <aside class="w-full lg:w-1/3">
         <div class="sticky top-24">
-          <div class="bg-gray-200 rounded-lg mb-6 flex items-center justify-center sticky-ad">
-            <p class="text-gray-500">Sticky Ad Unit (300×600)</p>
+          <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
+            <div class="w-full h-full ad-slot" aria-hidden="true"></div>
           </div>
 
           <div class="bg-white p-6 rounded-lg shadow-md">
