--- a/sito_modificato/subcategories/miscellaneous.html
+++ b/sito_modificato/subcategories/miscellaneous.html
@@ -568,9 +568,9 @@
             <!-- Right Sidebar: Ads & Popular Links -->
             <aside class="w-full lg:w-1/3">
                 <div class="sticky top-24 space-y-8">
-                    <!-- Ad Placeholder -->
-                    <div class="bg-gray-200 h-96 rounded-lg flex items-center justify-center">
-                        <p class="text-gray-500">Sticky Ad Unit (e.g., 300x600)</p>
+                    <!-- Advertisement -->
+                    <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
+                      <div class="w-full h-full ad-slot" aria-hidden="true"></div>
                     </div>
 
                     <!-- Related Categories -->
