--- a/sito_modificato/yeast-pitch-rate.html
+++ b/sito_modificato/yeast-pitch-rate.html
@@ -375,7 +375,7 @@
                         <code>V_starter = (C_req - C_avail) / GrowthYield</code></p>
                     </div>
 
-                    <!-- In-Content Ad Placeholder -->
+                    <!-- Advertisement -->
                     <div class="text-center my-6 bg-gray-200 py-10">
                         <p class="text-gray-500">In-Content Ad Unit</p>
                     </div>
@@ -399,9 +399,9 @@
             <!-- Right Sidebar: Ads & Related Links -->
             <aside class="w-full lg:w-1/3">
                 <div class="sticky top-24">
-                    <!-- Ad Placeholder -->
-                    <div class="bg-gray-200 h-96 rounded-lg mb-6 flex items-center justify-center">
-                        <p class="text-gray-500">Sticky Ad Unit (e.g., 300x600)</p>
+                    <!-- Advertisement -->
+                    <div class="bg-gray-100 border rounded-lg flex items-center justify-center min-h-[300px]">
+                      <div class="w-full h-full ad-slot" aria-hidden="true"></div>
                     </div>
 
                     <!-- Related Calculators -->
